Add services section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,39 @@
             <a class="btn" href="#">tell me more</a>
         </div>
     </header>
+    <section class="services">
+        <div class="container">
+            <div class="row title-row">
+                <h2>services</h2>
+                <p>Proin iaculis purus consequat sem cure. </p>
+            </div>
+            <div class="row">
+                <div class="col col-md-4">
+                    <p><i class="fa-sharp fa-solid fa-basket-shopping"></i></p>
+                    <h3>E-Commerce</h3>
+                    <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
+                        posuere odio in tincidunt.</p>
+                </div>
+                <div class="col col-md-4">
+                    <p><i class="fa-solid fa-laptop"><i class="fa-duotone fa-check decor"></i></i></p>
+                    <h3>Responsive Web</h3>
+                    <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
+                        posuere odio in tincidunt.</p>
+                </div>
+                <div class="col col-md-4">
+                    <p><i class="fa-solid fa-lock"><i class="keyhole decor"></i></i></p>
+                    <h3>Web Security</h3>
+                    <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
+                        posuere odio in tincidunt.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="portfolio">
+        <div class="container">
+
+        </div>
+    </section>
 </body>
 
 </html>
