--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <nav>
                 <div class="container">
                     <div class="row">
-                        <div class="col">
+                        <div class="col-6 brand-col">
                             <a class="brand-logo">golden</a>
                         </div>
-                        <div class="col">
+                        <div class="col-6">
                             <ul>
                                 <li><a href="#" class="nav-link">home</a></li>
                                 <li><a href="#" class="nav-link">services</a></li>
@@ -71,9 +71,81 @@
     </section>
     <section class="portfolio">
         <div class="container">
-
+            <div class="row title-row">
+                <h2>our portfolio</h2>
+                <p>Proin iaculis purus consequat sem cure. </p>
+            </div>
+            <div class="row">
+                <div class="col col-md-4 card">
+                    <div class="image-wrapper">
+                        <a href='#'><img src="./images/ebony-ivory.png" alt="ebony ivory"></a>
+                    </div>
+                    <div class="caption">
+                        <h3>ebony &amp; ivory</h3>
+                        <p>branding</p>
+                    </div>
+                </div>
+                <div class="col col-md-4 card">
+                    <div class="image-wrapper">
+                        <a href='#'><img src="./images/smart-stationary.png" alt="smart stationary"></a>
+                    </div>
+                    <div class="caption">
+                        <h3>smart stationary</h3>
+                        <p>print design</p>
+                    </div>
+                </div>
+                <div class="col col-md-4 card">
+                    <div class="image-wrapper">
+                        <a href='#'><img src="./images/clever-poster.png" alt="clever poster"></a>
+                    </div>
+                    <div class="caption">
+                        <h3>clever poster</h3>
+                        <p>print design</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-md-4 card">
+                    <div class="image-wrapper">
+                        <a href='#'><img src="./images/vinyl.png" alt="vinyl"></a>
+                    </div>
+                    <div class="caption">
+                        <h3>vinyl record</h3>
+                        <p>product mock-up</p>
+                    </div>
+                </div>
+                <div class="col col-md-4 card">
+                    <div class="image-wrapper">
+                        <a href='#'><img src="./images/treehouse.png" alt="treehouse"></a>
+                    </div>
+                    <div class="caption">
+                        <h3>treehouse template</h3>
+                        <p>web design</p>
+                    </div>
+                </div>
+                <div class="col col-md-4 card">
+                    <div class="image-wrapper">
+                        <a href='#'><img src="./images/burned-logo.png" alt="burned logo"></a>
+                    </div>
+                    <div class="caption">
+                        <h3>burned logo</h3>
+                        <p>branding</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <p>&#169; Copyright 2022 FreebiesXpress.com</p>
+            <div class="circle-row">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
