Add RWD corrections

--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
                 <p>Proin iaculis purus consequat sem cure. </p>
             </div>
             <div class="row">
-                <div class="col col-md-4">
+                <div class="col-12 col-md-4">
                     <p><i class="fa-sharp fa-solid fa-basket-shopping"></i></p>
                     <h3>E-Commerce</h3>
                     <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
                         posuere odio in tincidunt.</p>
                 </div>
-                <div class="col col-md-4">
+                <div class="col-12 col-md-4">
                     <p><i class="fa-solid fa-laptop"><i class="fa-duotone fa-check decor"></i></i></p>
                     <h3>Responsive Web</h3>
                     <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
                         posuere odio in tincidunt.</p>
                 </div>
-                <div class="col col-md-4">
+                <div class="col-12 col-md-4">
                     <p><i class="fa-solid fa-lock"><i class="keyhole decor"></i></i></p>
                     <h3>Web Security</h3>
                     <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
@@ -78,7 +78,7 @@
             <div class="row">
                 <div class="col col-md-4 card">
                     <div class="image-wrapper">
-                        <a href='#'><img src="./images/ebony-ivory.png" alt="ebony ivory"></a>
+                        <a href="#"><img src="./images/ebony-ivory.png" alt="ebony ivory"></a>
                     </div>
                     <div class="caption">
                         <h3>ebony &amp; ivory</h3>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col col-md-4 card">
                     <div class="image-wrapper">
-                        <a href='#'><img src="./images/smart-stationary.png" alt="smart stationary"></a>
+                        <a href="#"><img src="./images/smart-stationary.png" alt="smart stationary"></a>
                     </div>
                     <div class="caption">
                         <h3>smart stationary</h3>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="col col-md-4 card">
                     <div class="image-wrapper">
-                        <a href='#'><img src="./images/clever-poster.png" alt="clever poster"></a>
+                        <a href="#"><img src="./images/clever-poster.png" alt="clever poster"></a>
                     </div>
                     <div class="caption">
                         <h3>clever poster</h3>
@@ -107,7 +107,7 @@
             <div class="row">
                 <div class="col col-md-4 card">
                     <div class="image-wrapper">
-                        <a href='#'><img src="./images/vinyl.png" alt="vinyl"></a>
+                        <a href="#"><img src="./images/vinyl.png" alt="vinyl"></a>
                     </div>
                     <div class="caption">
                         <h3>vinyl record</h3>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col col-md-4 card">
                     <div class="image-wrapper">
-                        <a href='#'><img src="./images/treehouse.png" alt="treehouse"></a>
+                        <a href="#"><img src="./images/treehouse.png" alt="treehouse"></a>
                     </div>
                     <div class="caption">
                         <h3>treehouse template</h3>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="col col-md-4 card">
                     <div class="image-wrapper">
-                        <a href='#'><img src="./images/burned-logo.png" alt="burned logo"></a>
+                        <a href="#"><img src="./images/burned-logo.png" alt="burned logo"></a>
                     </div>
                     <div class="caption">
                         <h3>burned logo</h3>
